Update build scripts and remove gulp

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "template",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Build web app with redux, preact, livescript",
   "scripts": {
     "build": "webpack",
@@ -22,30 +22,25 @@
     "web-push": ""
   },
   "devDependencies": {
+    "babel-loader": "",
     "babel-plugin-external-helpers": "",
     "babel-plugin-istanbul": "",
+    "babel-plugin-transform-component-name": "",
     "babel-plugin-transform-es2015-modules-commonjs": "",
     "babel-plugin-transform-inline-environment-variables": "",
     "babel-plugin-transform-react-jsx": "",
     "babel-preset-babili": "",
     "babel-preset-stage-0": "",
-    "babel-loader": "",
     "babel-register": "",
-    "browser-sync": "",
     "css-loader": "",
     "file-loader": "",
-    "gulp": "",
-    "linking": "",
+    "linking": "next",
     "livescript": "",
     "livescript-next": "",
     "node-sass": "",
     "nyc": "",
     "preact": "",
-    "preact-render-to-string": "",
     "redux": "",
-    "rollup": "",
-    "rollup-plugin-babel": "",
-    "rollup-plugin-node-resolve": "",
     "sass-loader": "",
     "style-loader": "",
     "tape": "",
