Add HTML, caching, minify to production config

--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Build web app with redux, preact, livescript",
   "scripts": {
     "dev": "webpack-dev-server",
-    "build": "webpack",
+    "build": "cross-env NODE_ENV=production webpack",
     "pretest": "npm run build",
     "test": "nyc --instrument false lsc test/start",
     "posttest": "nyc report -r lcov -r json",
-    "deploy": "npm test && firebase deploy"
+    "deploy": "npm t && firebase deploy"
   },
   "repository": "dk00/template",
   "license": "Unlicense",
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "babel-loader": "",
+    "babel-minify-webpack-plugin": "",
     "babel-plugin-external-helpers": "",
     "babel-plugin-istanbul": "",
     "babel-plugin-transform-component-name": "",
@@ -31,19 +32,22 @@
     "babel-plugin-transform-inline-environment-variables": "",
     "babel-plugin-transform-react-jsx": "",
     "babel-preset-stage-0": "",
-    "babel-minify-webpack-plugin": "",
     "babel-register": "",
+    "cross-env": "",
     "css-loader": "",
+    "extract-loader": "",
     "file-loader": "",
+    "html-plugin": "",
     "linking": "next",
     "livescript": "",
     "livescript-next": "",
     "node-sass": "",
     "nyc": "",
     "preact": "",
+    "preact-render-to-string": "",
     "redux": "",
-    "sass-loader": "",
     "style-loader": "",
+    "sass-loader": "",
     "tape": "",
     "webpack": "",
     "webpack-dev-server": "",
