--- a/www/manifest.json
+++ b/www/manifest.json
@@ -4,7 +4,7 @@
   "theme_color": "#000",
   "background_color": "#000",
   "icons": [{
-    "src": "favico.png",
+    "src": "favicon.png",
     "sizes": "512x512"
   }],
   "start_url": "/?utm_source=homescreen",
