Upgrade to Babel 7

--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "web-push": ""
   },
   "devDependencies": {
-    "babel-loader": "",
+    "@babel/core": "",
+    "@babel/plugin-transform-modules-commonjs": "",
+    "@babel/plugin-transform-react-jsx": "",
+    "@babel/preset-stage-0": "",
+    "@babel/register": "",
+    "babel-loader": "next",
     "babel-minify-webpack-plugin": "",
     "babel-plugin-istanbul": "",
+    "babel-plugin-livescript": "",
     "babel-plugin-transform-component-name": "",
-    "babel-plugin-transform-es2015-modules-commonjs": "",
-    "babel-plugin-transform-react-jsx": "",
-    "babel-preset-stage-0": "",
-    "babel-register": "",
     "cross-env": "",
     "css-loader": "",
     "extract-loader": "",
@@ -38,7 +40,6 @@
     "html-plugin": "",
     "linking": "next",
     "livescript": "",
-    "livescript-next": "",
     "node-sass": "",
     "nyc": "",
     "preact": "",
