--- a/package.json
+++ b/package.json
@@ -1,57 +1,34 @@
 {
   "name": "template",
-  "version": "0.0.2",
-  "description": "Build web app with redux, preact, livescript",
+  "version": "0.1.0",
+  "description": "Web app template",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "cross-env NODE_ENV=production webpack",
-    "pretest": "npm run build",
-    "test": "nyc --instrument false lsc test",
-    "posttest": "nyc report -r lcov -r json",
-    "deploy": "npm t && firebase deploy"
+    "start": "webpack-dev-server",
+    "build": "rimraf www/*js && webpack -p",
+    "analysis": "webpack -p --profile --json > stats.json",
+    "pretest": "yarn run build",
+    "test": "jest --coverage",
+    "watch-test": "jest --clearCache; jest --watch",
+    "deploy": "yarn test && firebase deploy"
   },
   "repository": "dk00/template",
   "license": "Unlicense",
   "bugs": "https://github.com/dk00/template/issues",
   "homepage": "https://github.com/dk00/template#readme",
-  "files": [
-    "www",
-    "server.js"
-  ],
-  "dependencies": {
-    "express": "",
-    "web-push": ""
+  "installConfig": {
+    "pnp": true
   },
+  "private": true,
   "devDependencies": {
-    "@babel/core": "",
-    "@babel/plugin-transform-modules-commonjs": "",
-    "@babel/plugin-transform-react-jsx": "",
-    "@babel/preset-stage-0": "",
-    "@babel/register": "",
-    "babel-loader": "next",
-    "babel-minify-webpack-plugin": "",
-    "babel-plugin-istanbul": "",
-    "babel-plugin-livescript": "",
-    "babel-plugin-transform-component-name": "",
-    "cross-env": "",
-    "css-loader": "",
-    "extract-loader": "",
-    "file-loader": "",
-    "html-plugin": "",
-    "linking": "next",
-    "livescript": "",
-    "node-sass": "",
-    "nyc": "",
-    "preact": "",
-    "preact-render-to-string": "",
-    "redux": "",
-    "sass-loader": "",
-    "style-loader": "",
-    "tape": "",
-    "webpack": "",
-    "webpack-cli": "",
-    "webpack-dev-server": "",
-    "workbox-webpack-plugin": ""
-  },
-  "private": true
+    "@babel/runtime": "^7.3.1",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "rimraf": "^2.6.3",
+    "web-app-tools": "0.1.0-beta.10",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.1.14"
+  }
 }
