Upgrade to webpack 4

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "style-loader": "",
     "tape": "",
     "webpack": "",
+    "webpack-cli": "",
     "webpack-dev-server": "",
     "workbox-webpack-plugin": ""
   },
