--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "template",
-  "version": "0.1.0",
-  "description": "Web app template",
+  "version": "0.2.0",
+  "description": "Lean web app template, offline first, with Preact and LiveScript",
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "rimraf www/*js && webpack -p",
-    "analysis": "webpack -p --profile --json > stats.json",
-    "pretest": "yarn run build",
+    "start": "webpack serve",
+    "build": "rimraf build && cp -r public build && webpack --mode production",
+    "analysis": "webpack --mode production --profile --json > stats.json",
+    "pretest": "yarn build",
     "test": "jest --coverage",
-    "watch-test": "jest --clearCache; jest --watch",
+    "test:watch": "jest --clearCache; jest --watch",
     "deploy": "yarn test && firebase deploy"
   },
   "repository": "dk00/template",
@@ -20,15 +20,89 @@
   },
   "private": true,
   "devDependencies": {
-    "@babel/runtime": "^7.3.1",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
-    "rimraf": "^2.6.3",
-    "web-app-tools": "0.1.0-beta.10",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "@babel/core": "^7.13.14",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/runtime": "^7.13.10",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-livescript": "^0.0.3",
+    "css-loader": "^5.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^26.6.3",
+    "mini-css-extract-plugin": "^1.4.0",
+    "preact": "^10.5.13",
+    "rimraf": "^3.0.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "workbox-precaching": "^6.1.2",
+    "workbox-routing": "^6.1.2",
+    "workbox-webpack-plugin": "^6.1.2"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "arrowParens": "avoid"
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/react",
+        {
+          "runtime": "automatic",
+          "importSource": "preact"
+        }
+      ]
+    ],
+    "plugins": [
+      "babel-plugin-livescript"
+    ],
+    "env": {
+      "production": {
+        "plugins": [
+          [
+            "@babel/plugin-transform-runtime",
+            {
+              "regenerator": false
+            }
+          ]
+        ]
+      },
+      "test": {
+        "plugins": [
+          "@babel/proposal-optional-chaining",
+          "@babel/proposal-nullish-coalescing-operator",
+          "@babel/transform-modules-commonjs"
+        ]
+      }
+    }
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      ".*"
+    ],
+    "moduleFileExtensions": [
+      "ls",
+      "js",
+      "jsx",
+      "json",
+      "ts",
+      "tsx"
+    ],
+    "resolver": "jest-pnp-resolver",
+    "testMatch": [
+      "**/*.test.(ls|js|jsx|ts|tsx)"
+    ],
+    "transform": {
+      "\\.(ls|js|jsx|ts|tsx)$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "/node_modules/",
+      ".pnp"
+    ]
   }
 }
